Fix for IE to remove second scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,7 @@
 #body-public .full-height {
 	height: 100%;
 }
+.ie #body-public .full-height {
+	display: block;
+}
+
